# pysmelly

./: .coverage  .gitignore  .secrets.baseline  CLAUDE.md  LICENSE  Makefile  PLAN.md  PYSMELLY.md  README.md  pyproject.toml
docs/: DECISIONS.md  HOWTO-SIMPLIFY.md  PLAN-ARCHIVE.md  PLAN.md  SOMEDAY-MAYBE.md
src/pysmelly/: __init__.py  catalog.toml  cli.py  config.py  context.py  discovery.py  git_history.py  output.py  registry.py
src/pysmelly/checks/: __init__.py  architecture.py  callers.py  dead.py  framework.py  helpers.py  history.py  history_bugs.py  history_coupling.py  history_growth.py  history_helpers.py  history_team.py  imports.py  patterns.py  patterns_control.py  patterns_data.py  patterns_misc.py  patterns_naming.py  recommendations.py  repetition.py  structure.py
tests/: conftest.py  history_test_helpers.py  test_architecture.py  test_callers.py  test_cli.py  test_config.py  test_dead.py  test_git_history.py  test_history_bugs.py  test_history_checks.py  test_history_coupling.py  test_history_growth.py  test_history_team.py  test_imports.py  test_output.py  test_patterns.py  test_patterns_control.py  test_patterns_data.py  test_patterns_misc.py  test_patterns_naming.py  test_recommendations.py  test_repetition.py  test_structure.py
