[project]
name = "pysmelly"
dynamic = ["version"]
description = "AST-based Python code smell detector for AI-assisted code review"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "John Borwick", email = "borwick@uw.edu" }]
keywords = ["python", "lint", "code-smell", "ast", "refactoring", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = ["click>=8.0"]

[project.scripts]
pysmelly = "pysmelly.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pysmelly"]

[tool.hatch.build.targets.sdist]
include = ["src/pysmelly"]

[dependency-groups]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "bandit>=1.7",
    "pip-audit>=2.6",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -ra --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true

[tool.pysmelly]
# isinstance-chain and arrow-code are inherent to AST processing —
# you can't add methods to ast.List or avoid nesting when walking trees.
# shotgun-surgery on ctx.all_trees is by design (shared analysis context).
skip = ["isinstance-chain", "arrow-code", "shotgun-surgery"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
